# ec-gpu

./: Cargo.toml  README.md
bls12_377/: Cargo.toml
bls12_377/src/: lib.rs
bls12_377/src/fields/: fr.rs  mod.rs
cloud-ZK/rust-bench/: Cargo.toml
cloud-ZK/rust-rw-device/: Cargo.toml
ec-gpu/: Cargo.toml
ec-gpu-gen/: Cargo.toml
ec-gpu-gen/src/: fft.rs  fft_cpu.rs  program.rs  source.rs
ec-gpu/src/: fr.rs  lib.rs
gpu-tests/: Cargo.toml  build.rs
gpu-tests/tests/: fft.rs
groth16/: Cargo.toml  build.rs
groth16/src/: constraints.rs  lib.rs  prover.rs  r1cs_to_qap.rs  test.rs
groth16/tests/: mimc.rs
p2p/: Cargo.toml  build.rs
p2p/proto/: p2p.proto
p2p/src/: client.rs  lib.rs  server.rs
