[package]
name = "ec-gpu"
version = "0.2.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2021"
description = "Traits for field and eliptic curve operations on GPUs"
homepage = "https://github.com/filecoin-project/ff-cl-gen"
repository = "https://github.com/filecoin-project/ff-cl-gen"
license = "MIT/Apache-2.0"

[dependencies]
ark-bls12-377 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-ec = { version = "0.4.0", default-features = false }