# NOTE vmx 2022-07-07: Using the `__private_bench` feature of `blstrs` is just temporarily until
# https://github.com/zkcrypto/group/pull/29 is fixed. Then we won't need the exports of `Fp` and
# `Fp2` any more.
[package]
name = "gpu-tests"
version = "0.1.0"
edition = "2021"
description = "Test for the ec-gpu project"
homepage = "https://github.com/filecoin-project/ec-gen"
repository = "https://github.com/filecoin-project/ec-gen"
license = "MIT/Apache-2.0"
publish = false

[dependencies]
blstrs = { version = "0.6.0", features = ["__private_bench"] }
criterion = "0.4"
ec-gpu = { path = "../ec-gpu", default-features = false }
ec-gpu-gen = { path = "../ec-gpu-gen", default-features = false }
ff = { version = "0.12.0", default-features = false }
fil_logger = "0.1.6"
group = "0.12.0"
pairing = "0.22.0"
rand = "0.8"
rayon = "1.5.3"
ark-ff = "0.4.2"
num-bigint = "0.4.3"
ark-ec = { version = "0.4.0", default-features = false }

[dev-dependencies]
blstrs = { version = "0.6.0", features = ["__private_bench"] }
ark-ec = { version = "0.4.0", default-features = false }
criterion = "0.4"
ec-gpu = { path = "../ec-gpu", default-features = false }
ec-gpu-gen = { path = "../ec-gpu-gen", default-features = false }
ff = { version = "0.12.0", default-features = false }
fil_logger = "0.1.6"
group = "0.12.0"
pairing = "0.22.0"
rand = "0.8"
rayon = "1.5.3"
ark-ff = "0.4.2"
ark-bls12-377 = { path = "../bls12_377" }
num-bigint = "0.4.3"

[build-dependencies]
ark-ec = { version = "0.4.0", default-features = false }
blstrs = { version = "0.6.0", features = ["__private_bench"] }
ec-gpu = { path = "../ec-gpu", default-features = false }
ec-gpu-gen = { path = "../ec-gpu-gen" }
ark-ff = "0.4.2"
ark-bls12-377 = { path = "../bls12_377" }

[features]
default = ["cuda", "opencl"]
cuda = ["blstrs/gpu", "ec-gpu-gen/cuda"]
opencl = ["blstrs/gpu", "ec-gpu-gen/opencl"]

[[bench]]
name = "multiexp"
harness = false
