[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "./src/lib.rs"

# server binary
[[bin]]
name = "server"
path = "src/server.rs"

# client binary
[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
futures = { version = "0.3", default-features = false, features = ["alloc"] }
prost = "0.11"
ctrlc = "3.2"
tokio = { version = "1.21.2", features = [
    "rt-multi-thread",
    "macros",
    "signal",
] }
tokio-stream = { version = "0.1.11", features = ["net"] }
tonic = { version = "0.8.3", features = ["tls", "gzip"] }
h2 = "0.3"
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }

[build-dependencies]
tonic-build = { version = "0.8.3", features = ["prost"] }

[dev-dependencies]
hex = "0.4.3"